--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         "dompdf/dompdf": "^2.0",
         "guzzlehttp/guzzle": "^7.2",
         "inertiajs/inertia-laravel": "^0.6.9",
-        "laravel/fortify": "*",
+        "laravel/fortify": "^1.17",
         "laravel/framework": "^10.10",
         "laravel/jetstream": "^3.2",
         "laravel/sanctum": "^3.2",
